  This is a dual-build library which will both work with the plain 68k
  AmigaOS and the PowerPC native AmigaOS4. The example source code can be
  found in the "skeleton_library" subdirectory.

- The thread-safe version of isatty() should now work for stdio
  file descriptors, too.

- Retrofitted thread-safety into the termios code.


c.lib 1.193 (4.6.2005)

- fpclassify() now returns FP_ZERO both for 0 and -0.

- nan() and nanf() now return quiet NaNs.

- Added internal __inf() and __inff() functions.

- strtof() now calls nanf() and __inff(), respectively, to produce
  the special floating point values for nan/inf/infinity.

- strtod() now calls nan() and __inf(), respectively, to produce
  the special floating point values for nan/inf/infinity.

- The scanf() family now calls nan() and __inf(), respectively, to
  produce the special floating point values for nan/inf/infinity.

- Added %D, %e, %F, %g, %G and %h for strftime(); repaired %I.

- Documented __strip_double_slash() and plugged in a memmove()
  in place of the copying loop.

- Modified __translate_unix_to_amiga_path_name() and
  __translate_amiga_to_unix_path_name() to not to call strlen()
  on the results of __strip_double_slash().

- For %C strtime() should return the century number, not the
  year number mod 100.

- The record locking code in fcntl() is no longer part of the
  regular libc.a, but only of libunix.a.

- Changed the definition of the D_S() macro to cast the pointer
  address to an unsigned 32 bit integer.

- Modified the locale-aware isalnum(), isalpha(), iscntrl(),
  isdigit(), isgraph(), islower(), isprint(), ispunct(), isspace(),
  isupper(), isxdigit(), tolower() and toupper() functions
  to clamp the input parameter to the "unsigned char" range before
  it is submitted to the respective locale.library function. This
  should be in sync with what the specs demand, which state that
  if the input parameter is neither EOF nor in the range of an