@@ -110,15 +110,17 @@ WARNINGS = \
 #	-Wconversion -Wshadow
 
 INCLUDES = -Iinclude -I. -Inetinclude
-#OPTIONS = -fno-builtin -fno-common -DDEBUG
- OPTIONS = -fno-builtin -fno-common -DNDEBUG
-#OPTIONS = -fno-builtin -fno-common -D__MEM_DEBUG
-#OPTIONS = -fno-builtin -fno-common -DDEBUG -D__MEM_DEBUG -DNO_INLINE_STDARG
+#OPTIONS = -fno-builtin -fno-common -D__USE_CLIB2_NETLIB -DDEBUG
+ OPTIONS = -fno-builtin -fno-common -D__USE_CLIB2_NETLIB -DNDEBUG
+#OPTIONS = -fno-builtin -fno-common -D__USE_CLIB2_NETLIB -D__MEM_DEBUG
+#OPTIONS = -fno-builtin -fno-common -D__USE_CLIB2_NETLIB -DDEBUG -D__MEM_DEBUG -DNO_INLINE_STDARG
  OPTIMIZE = -O -fomit-frame-pointer -fstrength-reduce -finline-functions
 #OPTIMIZE = -O2 -fomit-frame-pointer
 #DEBUG = -g
 
-CFLAGS = $(WARNINGS) $(OPTIMIZE) $(DEBUG) $(OPTIONS) $(CODE_FLAGS) $(CODE_TYPE) $(INCLUDES)
+CFLAGS = \
+	$(WARNINGS) $(OPTIMIZE) $(DEBUG) $(OPTIONS) \
+	$(CODE_FLAGS) $(CODE_TYPE) $(INCLUDES)
 
 ##############################################################################
 
