@@ -36,7 +36,7 @@ INCLUDE_DIR = V:include
  CPU		= cpu=060
 MATH		= define=IEEE_FLOATING_POINT_SUPPORT math=IEEE
 SUPPORT		= define=UNIX_PATH_SEMANTICS define=SOCKET_SUPPORT define=USERGROUP_SUPPORT \
-		  define=__C_MACROS__ define=__THREAD_SAFE
+		  define=__C_MACROS__ define=__THREAD_SAFE define=__USE_CLIB2_NETLIB
 
 ##############################################################################
 
